# audiovision

./: .gitignore  AGENTS.md  Audiovision.jucer  CMakeLists.txt  style.ia
JuceLibraryCode/: JuceHeader.h
Source/: Main.cpp
Source/AudioEngine/: AudioEngine.cpp  AudioEngine.h  AudioOutputEngine.cpp  AudioOutputEngine.h  AudioOutputManager.cpp  AudioOutputManager.h
Source/AudioEngine/AudioOutput/: AudioOutputEngine.cpp  AudioOutputEngine.h  AudioOutputManager.cpp  AudioOutputManager.h
Source/AudioEngine/Graph/: GraphManager.cpp  GraphManager.h  GraphModule.cpp  GraphModule.h  GraphNode.cpp  GraphNode.h
Source/AudioEngine/Graph/Builder/: GraphBuilder.cpp  GraphBuilder.h
Source/AudioEngine/Graph/Model/: GraphNode.h
Source/AudioEngine/Graph/Runtime/: GraphInstance.cpp  GraphInstance.h  GraphManager.cpp  GraphManager.h  GraphModule.cpp  GraphModule.h
Source/AudioEngine/Graph/VirtualConnections/: GraphConnectionManager.cpp  GraphConnectionManager.h  GraphVirtualConnection.cpp  GraphVirtualConnection.h
Source/AudioEngine/Nodes/: AudioNode.h  AudioTrackNode.cpp  AudioTrackNode.h  AuxTrackNode.cpp  AuxTrackNode.h  VolumeNode.cpp  VolumeNode.h
Source/AudioEngine/Parameters/: ParameterFactory.cpp  ParameterFactory.h  ValueTreeManager.cpp  ValueTreeManager.h
Source/AudioEngine/Plugin/: PluginChainBuilder.cpp  PluginChainBuilder.h  PluginInstanceFactory.cpp  PluginInstanceFactory.h  PluginInstanceStore.cpp  PluginInstanceStore.h  PluginRuntime.cpp  PluginRuntime.h
Source/AudioEngine/Recording/: RecordSession.cpp  RecordSession.h  RecordState.h  Recorder.cpp  Recorder.h
Source/Command/: CommandCenter.cpp  CommandCenter.h  Commands.h  TrackCommandManager.cpp  TrackCommandManager.h  WheelCommandManager.cpp  WheelCommandManager.h
Source/Command/Definitions/: EditCommands.cpp  EditCommands.h  TrackCommands.cpp  TrackCommands.h  TransportCommandIds.h  TransportCommands.cpp  TransportCommands.h  WaveformCommands.cpp  WaveformCommands.h
Source/Command/Shortcuts/: ShortcutMappings.cpp  ShortcutMappings.h
Source/Core/AudioClip/: AudioClip.cpp  AudioClip.h  Fade.cpp  Fade.h  FadeIn.cpp  FadeIn.h  FadeOut.cpp  FadeOut.h  GainLine.cpp  GainLine.h
Source/Core/Automation/: Automation.cpp  Automation.h  AutomationManager.cpp  AutomationManager.h
Source/Core/CustomEdits/: EditTest.cpp  EditTest.h  ImportEdit.cpp  ImportEdit.h
Source/Core/Edit/: Edit.cpp  Edit.h  EditActions.cpp  EditActions.h  EditState.cpp  EditState.h  Marker.cpp  Marker.h  Scene.cpp  Scene.h
Source/Core/Plugin/: Plugin.cpp  Plugin.h  PluginRegistry.cpp  PluginRegistry.h
Source/Core/Snapshots/: ClipSnapshot.cpp  ClipSnapshot.h  ClipUndoActions.cpp  ClipUndoActions.h
Source/Core/Track/: AudioTrack.cpp  AudioTrack.h  AuxTrack.cpp  AuxTrack.h  FolderTrack.cpp  FolderTrack.h  RecordTrack.cpp  RecordTrack.h  Send.cpp  Send.h  Track.cpp  Track.h  TrackState.h
Source/Core/Video/: Video.cpp  Video.h  VideoClip.cpp  VideoClip.h  VideoFile.cpp  VideoFile.h
Source/Gui/: MainComponent.cpp  MainComponent.h
Source/Gui/Assets/: SvgFactory.cpp  SvgFactory.h
Source/Gui/Components/: AudioOutputComponent.cpp  AudioOutputComponent.h  Components.h  FileSelectorComponent.cpp  FileSelectorComponent.h  RecordComponent.cpp  RecordComponent.h
Source/Gui/Components/Common/: EditableText.cpp  EditableText.h  Fader.cpp  Fader.h  PrimaryContainer.cpp  PrimaryContainer.h  ReverbComponent.cpp  ReverbComponent.h  RotaryFader.cpp  RotaryFader.h  RoundedButton.h  SecondaryContainer.cpp  SecondaryContainer.h  SelectableList.cpp  SelectableList.h  SendsList.cpp  SendsList.h  SvgButton.cpp  SvgButton.h  SvgIcon.cpp  SvgIcon.h  ToggleTextButton.cpp  ToggleTextButton.h  VerticalFader.cpp  VerticalFader.h  VuMeter.h
Source/Gui/Components/ContextualSection/: ContextualSection.cpp  ContextualSection.h  InspectorSection.cpp  InspectorSection.h  SceneContextPanel.cpp  SceneContextPanel.h  SendsList.cpp  SendsList.h
Source/Gui/Components/Header/: AutomationPanel.cpp  AutomationPanel.h  ControlsPanel.cpp  ControlsPanel.h  GlobalVuMeter.cpp  GlobalVuMeter.h  Header.cpp  Header.h  TimecodesDisplay.cpp  TimecodesDisplay.h  TrackFolderActivationPanel.cpp  TrackFolderActivationPanel.h
Source/Gui/Components/Track/: AudioClipComponent.cpp  AudioClipComponent.h  CursorTimeline.cpp  CursorTimeline.h  PlayheadFollowController.cpp  PlayheadFollowController.h  TimelineRuler.cpp  TimelineRuler.h  TrackContent.cpp  TrackContent.h  TrackContentPanel.cpp  TrackContentPanel.h  TrackHeader.cpp  TrackHeader.h  (+6 more)
Source/Gui/Plugin/: PluginEditorHost.cpp  PluginEditorHost.h  PluginEditorWindow.cpp  PluginEditorWindow.h
Source/Gui/Style/: Font.h
Source/Gui/Utils/: CursorController.cpp  CursorController.h  DebugWatchWindow.cpp  DebugWatchWindow.h  PlayheadViewFollow.cpp  PlayheadViewFollow.h  SelectionManager.cpp  SelectionManager.h  ViewRangeMapper.cpp  ViewRangeMapper.h  WheelForwardingViewport.cpp  WheelForwardingViewport.h
Source/Gui/Video/: VideoFrameBuffer.cpp  VideoFrameBuffer.h  VideoRenderer.cpp  VideoRenderer.h  VideoSyncController.cpp  VideoSyncController.h  VideoThumbnailCache.cpp  VideoThumbnailCache.h  VideoView.cpp  VideoView.h
Source/Utils/: Channel.h  DebugWatchRegistry.cpp  DebugWatchRegistry.h  Format.h  Timecode.h  Transport.h  Uuid.h  Volume.h
Source/Utils/IO/: AudioFile.cpp  AudioFile.h  AudioGraphMermaidExporter.cpp  AudioGraphMermaidExporter.h  EditSerializer.cpp  EditSerializer.h  GraphMermaidExporter.cpp  GraphMermaidExporter.h  Recorder.cpp  Recorder.h  TrackSerializer.cpp  TrackSerializer.h
Source/Utils/Pan/: Pan.cpp  Pan.h
Source/Utils/Waveform/: PeakCacheManager.cpp  PeakCacheManager.h  PeakFile.cpp  PeakFile.h  PeakFileBuilder.cpp  PeakFileBuilder.h  PeakFileFormat.h  ThumbnailCache.cpp  ThumbnailCache.h
Tests/: GraphManagerTests.cpp  Tests.cpp
exports/: audiovision.json
(+59 files in other folders)
